- Renamed most variables and changed the prefix "JV" to "_".
- Added experimental LUKS + ZFS support
- New application structure. The program now uses flags in order to determine
  what features were enabled. The check/copy functions are now streamlined. 
  There is also only 1 init script now and the init script also uses flags in order
  to determine what to do and what kernel modules to load.

1.5.1
----------
- Requirement for zlib_deflate has changed. You now have to compile
  zlib_deflate into the kernel rather than as a module.
- Dependency list is now sanitized before application copies them over to
  the initramfs. This makes IO much less since it doesn't have to copy duplicates.
- File structured renamed/simplified

1.5.0-r1
----------
- Same as last release, but I forgot to uncomment the "clean all" action at the
  end of the createInit script.

1.5.0
----------
- Removed all support for LVM and RAID. The creator will now only focus on ZFS.
- Relicensed to MPLv2.
- Rewrote the parsing used to find the dynamic libraries required for the apps.
- Creator now properly gets and loads "zlib_deflate" module. This was causing
  problems at boot up because without the zlib_deflate module, an user would
  get a "unknown symbol in module or invalid parameter" error for all the other
  zfs modules.
- Added more comments, cleaned up a few comments
- The script must be ran as root in order to use depmod. The script now
  checks to see if root is the user running it.
- If depmod cannot be ran, the script will halt.

1.4.4
----------
- Added checks for 'cpio'. 
- Added ability to pass the option and kernel version you want directly
  on the command line. This will help you if you want to make a script.
- The creator now outputs the initramfs with a generic name of "initrd.img".
  This will also help you if you want to quickly copy/paste the initrd file
  into the /boot directory.
- Relicensed the application from GPLv2 to the more permissive ISC license.